Sculpting - Face Sets, Initialise Face Sets - By Edge Bevel Weights do not work #103195

Closed
opened 2022-12-13 20:43:56 +01:00 by Hoang Duy Tran · 5 comments
Member

System Information
Operating system: macOS-10.15.7-x86_64-i386-64bit 64 Bits

Blender Version
Broken: version: 3.5.0 Alpha, branch: master, commit date: 2022-12-02 21:53, hash: 9719fd6964

Short description of error

  • Selected edges and masked bevel weight for them as 1
    Screenshot 2022-12-13 at 19.31.41.png

  • Put on Bevel Weight modifier to show clearly where the bevel weights are and is recognised by another software component
    Screenshot 2022-12-13 at 19.38.57.png

  • In Sculpt mode, initiate 'Face Sets -> Initialise Face Sets -> By Edge Bevel Weight
    Screenshot 2022-12-13 at 19.39.10.png

  • Result do no show any areas marked by weight to have a separate face set color
    Screenshot 2022-12-13 at 19.39.18.png

  • Expected to see areas marked with Bevel Weight = 1 to be in separate colors and separate Face Sets

**System Information** Operating system: macOS-10.15.7-x86_64-i386-64bit 64 Bits **Blender Version** Broken: version: 3.5.0 Alpha, branch: master, commit date: 2022-12-02 21:53, hash: `9719fd6964` **Short description of error** - Selected edges and masked bevel weight for them as 1 ![Screenshot 2022-12-13 at 19.31.41.png](https://archive.blender.org/developer/F14056040/Screenshot_2022-12-13_at_19.31.41.png) - Put on Bevel Weight modifier to show clearly where the bevel weights are and is recognised by another software component ![Screenshot 2022-12-13 at 19.38.57.png](https://archive.blender.org/developer/F14056045/Screenshot_2022-12-13_at_19.38.57.png) - In Sculpt mode, initiate 'Face Sets -> Initialise Face Sets -> By Edge Bevel Weight ![Screenshot 2022-12-13 at 19.39.10.png](https://archive.blender.org/developer/F14056049/Screenshot_2022-12-13_at_19.39.10.png) - Result do no show any areas marked by weight to have a separate face set color ![Screenshot 2022-12-13 at 19.39.18.png](https://archive.blender.org/developer/F14056050/Screenshot_2022-12-13_at_19.39.18.png) - Expected to see areas marked with Bevel Weight = 1 to be in separate colors and separate Face Sets
Author
Member

Added subscriber: @hoanguk

Added subscriber: @hoanguk
Hans Goudey self-assigned this 2022-12-13 21:23:36 +01:00
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

This issue was referenced by d666c64f5d

This issue was referenced by d666c64f5d6939fec81bc51b8aed140e1c17ddf5

This issue was referenced by 8ee020d11f

This issue was referenced by 8ee020d11fe8debfd64274658d71d0d60b27e676
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#103195
No description provided.