Fix T103195: Initialize face sets from bevel weights broken

The conversion from char to float (divide by 255) wasn't removed in
291c313f80b4cccc8fcc. Also fix a crash when the edge crease layer
didn't exist.